# cargo-debstatus

./: .gitignore  Cargo.toml  README.md  RELEASE.md  cargo-debstatus.1
.github/workflows/: rust.yml
src/: args.rs  db.rs  debian.rs  errors.rs  filter.rs  graph.rs  main.rs  metadata.rs  tree.rs
src/format/: human.rs  json.rs  mod.rs
tests/data/: cargo_metadata_with_common_dependency.json  cargo_metadata_with_flat_dependencies.json  cargo_metadata_with_loop.json  cargo_metadata_without_loop.json
