[package]
name = "cargo-debstatus"
version = "0.5.2"
description = "cargo-tree for debian packaging"
authors = ["kpcyrd <git@rxv.cc>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/cargo-debstatus"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.15"
petgraph = "0.6"
semver = "1"
serde_json = "1.0"
structopt = "0.3"

colored = "2"
postgres = "0.19"
serde = { version="1.0", features=["derive"] }
dirs = "5"
log = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.10"
indicatif = "0.17"
