[package]
name = "cargo-debstatus"
version = "0.6.3"
description = "cargo-tree for debian packaging"
authors = ["kpcyrd <git@rxv.cc>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "(MIT OR Apache-2.0) AND GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/cargo-debstatus"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
clap = { version = "4.5.16", features = ["derive"] }
colored = "3"
crossbeam-channel = "0.5"
dirs = "6"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
petgraph = "0.6"
postgres = "0.19"
semver = "1"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
